Moves default preference initialization for AUT Agent into client.ui.
Also removes some unused preference keys and classes.